[package]
name = "napi-rs-addon"
version = "0.1.0"
authors = ["Jolyon Saunders <jol.saund@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "1.4.0"
napi-derive = "1.1.0"

[build-dependencies]
napi-build = "1.0.1"
